--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li class="features-list icon-antenna">
               <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
-                  <use href="./images/svg/icons.svg#icon-antenna"></use>
+                  <use href="./images/svg/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -111,7 +111,7 @@
             <li class="features-list icon-clock">
               <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
-                  <use href="./images/svg/icons.svg#icon-clock"></use>
+                  <use href="./images/svg/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="features-title">ПУНКТУАЛЬНІСТЬ</h3>
@@ -134,7 +134,7 @@
             <li class="features-list icon-astronaut">
               <div class="box-icon-features">
                 <svg class="features-icon" width="70" height="70">
-                  <use href="./images/svg/icons.svg#icon-astronaut"></use>
+                  <use href="./images/svg/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="features-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
