--- a/index.html
+++ b/index.html
@@ -60,27 +60,25 @@
         <ul class="auth-nav list">
           <li class="link link-mail">
             <a
-              href="mailto:info@devstudio.com"
               class="auth-link-mail"
+              href="mailto:info@devstudio.com"
               lang="en"
               aria-label="mail"
-              ><span class="envelope">
-                <svg class="mail-icon" widht="16" height="12">
-                  <use href="./images/svg/icons.svg#icon-envelope"></use>
-                </svg> </span
+            >
+              <svg class="mail-icon" widht="16" height="12">
+                <use href="./images/svg/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="link link-tel">
             <a
-              href="tel:+380961111111"
               class="auth-link-tel"
+              href="tel:+380961111111"
               lang="en"
               aria-label="tel"
-              ><span class="smartphone">
-                <svg class="tel-icon" widht="10" height="16">
-                  <use href="./images/svg/icons.svg#icon-smartphone"></use>
-                </svg> </span
+            >
+              <svg class="tel-icon" widht="10" height="16">
+                <use href="./images/svg/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
