--- a/portfolio.html
+++ b/portfolio.html
@@ -60,20 +60,26 @@
         <div class="box-nav">
           <ul class="auth-nav list">
             <li class="link link-mail">
-              <a href="mailto:info@devstudio.com" class="auth-link-mail"
-                ><span class="envelope">
-                  <svg class="mail-icon" widht="16" height="12">
-                    <use href="./images/svg/icons.svg#icon-envelope"></use>
-                  </svg> </span
+              <a
+                class="auth-link-mail"
+                href="mailto:info@devstudio.com"
+                lang="en"
+                aria-label="mail"
+              >
+                <svg class="mail-icon" widht="16" height="12">
+                  <use href="./images/svg/icons.svg#icon-envelope"></use></svg
                 >info@devstudio.com</a
               >
             </li>
             <li class="link link-tel">
-              <a href="tel:+380961111111" class="auth-link-tel"
-                ><span class="smartphone">
-                  <svg class="tel-icon" widht="10" height="16">
-                    <use href="./images/svg/icons.svg#icon-smartphone"></use>
-                  </svg> </span
+              <a
+                class="auth-link-tel"
+                href="tel:+380961111111"
+                lang="en"
+                aria-label="tel"
+              >
+                <svg class="tel-icon" widht="10" height="16">
+                  <use href="./images/svg/icons.svg#icon-smartphone"></use></svg
                 >+38 096 111 11 11</a
               >
             </li>
