--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
                 lang="en"
                 aria-label="instagram"
               >
-                <svg class="clients-icon" width="41" height="47">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/svg/icons.svg#icon-group"></use>
                 </svg>
               </a>
@@ -539,7 +539,7 @@
                 lang="en"
                 aria-label="instagram"
               >
-                <svg class="clients-icon" width="40" height="52">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/svg/icons.svg#icon-group-1"></use>
                 </svg>
               </a>
@@ -554,7 +554,7 @@
                 lang="en"
                 aria-label="instagram"
               >
-                <svg class="clients-icon" width="44" height="41">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/svg/icons.svg#icon-group-2"></use>
                 </svg>
               </a>
@@ -569,7 +569,7 @@
                 lang="en"
                 aria-label="instagram"
               >
-                <svg class="clients-icon" width="84" height="40">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/svg/icons.svg#icon-group1"></use>
                 </svg>
               </a>
@@ -584,7 +584,7 @@
                 lang="en"
                 aria-label="instagram"
               >
-                <svg class="clients-icon" width="63" height="45">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/svg/icons.svg#icon-group-4"></use>
                 </svg>
               </a>
@@ -599,7 +599,7 @@
                 lang="en"
                 aria-label="instagram"
               >
-                <svg class="clients-icon" width="94" height="44">
+                <svg class="clients-icon" width="106" height="60">
                   <use href="./images/svg/icons.svg#icon-group-5"></use>
                 </svg>
               </a>
@@ -612,9 +612,11 @@
     <footer class="page-footer">
       <div class="container box-footer">
         <div class="box-address">
-          <a href="./index.html" class="footer-logo"
-            >Web<span class="logo-footer-web">Studio</span></a
-          >
+          <div class="box-logo">
+            <a href="./index.html" class="footer-logo"
+              >Web<span class="logo-footer-web">Studio</span></a
+            >
+          </div>
           <address class="box-address">
             <ul class="address list">
               <li class="link footer-link">
