--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
           </ul>
           <ul class="projects list">
             <li class="projects-list">
-              <a href="" class="link"
+              <a href="" class="link projects-link"
                 ><img
                   src="./images/portfolio/img.jpg"
                   alt="відкритий ноутбук"
@@ -122,7 +122,7 @@
               </a>
             </li>
             <li class="projects-list">
-              <a href="" class="link"
+              <a href="" class="link projects-link"
                 ><img
                   src="./images/portfolio/img1.jpg"
                   alt="два баскетболіста"
@@ -138,7 +138,7 @@
               >
             </li>
             <li class="projects-list">
-              <a href="" class="link">
+              <a href="" class="link projects-link">
                 <img
                   src="./images/portfolio/img2.jpg"
                   alt="logo ресторана Seafood"
@@ -152,7 +152,7 @@
               >
             </li>
             <li class="projects-list">
-              <a href="" class="link">
+              <a href="" class="link projects-link">
                 <img
                   src="./images/portfolio/img3.jpg"
                   alt="навушники"
@@ -166,7 +166,7 @@
               >
             </li>
             <li class="projects-list">
-              <a href="" class="link">
+              <a href="" class="link projects-link">
                 <img
                   src="./images/portfolio/img4.jpg"
                   alt="дві коробки"
@@ -180,7 +180,7 @@
               >
             </li>
             <li class="projects-list">
-              <a href="" class="link">
+              <a href="" class="link projects-link">
                 <img
                   src="./images/portfolio/img5.jpg"
                   alt="Монітор"
@@ -196,7 +196,7 @@
               >
             </li>
             <li class="projects-list">
-              <a href="" class="link">
+              <a href="" class="link projects-link">
                 <img
                   src="./images/portfolio/img6.jpg"
                   alt="відкрита книга"
@@ -210,7 +210,7 @@
               >
             </li>
             <li class="projects-list">
-              <a href="" class="link">
+              <a href="" class="link projects-link">
                 <img
                   src="./images/portfolio/img7.jpg"
                   alt="лейбл LAB"
@@ -224,7 +224,7 @@
               >
             </li>
             <li class="projects-list">
-              <a href="" class="link">
+              <a href="" class="link projects-link">
                 <img
                   src="./images/portfolio/img8.jpg"
                   alt="людина працює за ноутбуком"
